# detector-core

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  detector_core_version.cmake.in  format-code.sh
cmake/: Version.cmake
docs/: signal-format.md
docs/examples/: signal_v1.sig  signal_v2.sig
include/: core_version.hpp  endian.hpp  logging.hpp  sample.hpp  signal.hpp  signal_file.hpp  signal_file_v1.hpp  signal_file_v2.hpp  signal_file_v3.hpp  system.hpp
include/gpio/: gpio.hpp  gpio_defs.hpp  gpio_types.hpp
include/gpio/boards/: board.hpp  orangepi_one_h3.hpp  simulate_gpio.hpp
include/utils/: ring_buffer.hpp  ring_buffer_iterator.hpp  simple_vector.hpp
src/: core_version.cpp  logging.cpp  signal.cpp  signal_file.cpp  signal_file_v1.cpp  signal_file_v2.cpp  signal_file_v3.cpp  system.cpp
src/gpio/: board.cpp  gpio.cpp  orangepi_one_h3.cpp  simulate_gpio.cpp
tests/: test_signal_v3.cpp
